<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/WelcomeFragment">

    <fragment
        android:id="@+id/WelcomeFragment"
        android:name="com.tktzlabs.AK7MT.WelcomeFragment"
        android:label="@string/welcome_fragment_label"
        tools:layout="@layout/fragment_welcome">

        <action
            android:id="@+id/action_WelcomeFragment_to_TradingFragment"
            app:destination="@id/TradingFragment" />

        <action
            android:id="@+id/action_WelcomeFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />

    </fragment>
    <fragment
        android:id="@+id/TradingFragment"
        android:name="com.tktzlabs.AK7MT.TradingFragment"
        android:label="@string/trading_fragment_label"
        tools:layout="@layout/fragment_trading">

        <action
            android:id="@+id/action_TradingFragment_to_WelcomeFragment"
            app:destination="@id/WelcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.tktzlabs.AK7MT.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingsFragment_to_WelcomeFragment"
            app:destination="@id/WelcomeFragment" />
    </fragment>


</navigation>